# gekyum-player

./: .gitignore  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: .env  Cargo.toml  gekyume.db  gekyume.db-shm  gekyume.db-wal  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.sqlx/: query-06a12400a376bd08640dc6f514827ac3c10e30c0399b68c5cda564d35f4d5713.json  query-0a8743fd3c1ac08ff21bbbe3fd1d4f2eb525b16d94606b149ffbe85b95556e54.json  query-0b8d1b6fb53b0927c7f1cb0f5167d72fe3365bd8631032182b32b1d9d2533855.json  query-15e09d91872e970774e489d5dc1353922aacc75c1ac8129bde94ba814836e12f.json  query-1a635e554c514cef0990ec61edef90b0db73050da330ca29e406f0ee5812c321.json  query-20172fc6f51fb2e28e8b379a739cc40bccf6b43a22335e723b1641f75c6e7fa0.json  query-2abed8b02b44c59cd6b2157d24c4b3da171e88884f928a90214f18ec480e089d.json  query-2acad1f1cb7fc95505fb4b29f22e1dfa110dd4e81cf64c1d3b6861370ac7f3cd.json  query-67c5e5f565462fd682e1f72c757935a6f712fa75cf469a33f01c58eff4c1fd7b.json  query-715b2fea600ad947a20487080589b885515b28709ff45dfedf9135a263332cfe.json  query-75d81899139de1ebf4204bdd00323bd63675256bb2e202a31b2d32726b332442.json  query-8a683d3c8cc3aaf5284fd042ba527290dfe9334e61e7acc4603f45d2e02c1b75.json  query-9a7c230e3715ccc5599c1f55507f04d2295dee93644d0a765951f4ba0308bcd8.json  query-9e6239b6707748a096e0d603fbc28396c09d23d848156e11825161b71b82ff96.json  query-a865440df9779ab00c6c64f3817a17f856c8b384dfd85efe288e0a8a6e707328.json  query-bb3b6de6db499c84f6e030ac6a551d98c259305887c8261aa9a4669e2df4f234.json  query-daee17d65eba545d9ad039928b46a3db0ecd2c273b849977dc7ca71b448e4d6b.json  query-dc10568220bd10a20897e2cf3c4defff3a625f575744c94af9c1a019ffea9c5c.json  (+3 more)
(+59 files in other folders)
