[package]
name = "gekyum-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gekyum_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
lofty = "0.24.0"
base64 = "0.22.1"
file_picker = "0.4.1"
walkdir = "2.5.0"
rodio = { version = "0.22.2", features = ["symphonia-all"] }
log = "0.4.29"
chrono = { version = "0.4.44", features = ["serde"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "chrono", "migrate"] }
tokio = { version = "1.52.3", features = ["full"] }
dotenvy = "0.15.7"
futures = "0.3.32"
dirs = "6.0.0"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
nvml-wrapper = "0.12.1"
souvlaki = "0.8.3"
raw-window-handle = "0.6.2"

[target.'cfg(target_os = "android")'.dependencies]
rodio = { version = "0.22.2", features = ["symphonia-all"] }
cpal = { version = "0.15", features = ["oboe-shared-stdcxx"] }
ndk-context = "0.1.1"
jni = "0.21.1"

[target.aarch64-linux-android.dependencies]
tauri-plugin-media-session = "0.2.4"
